# ragu

./: CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md  codecov.yml  justfile
.github/: CODEOWNERS
.github/actions/rust-setup/: action.yml
.github/scripts/: extract-regressions.jq  find-pr.jq  format-regressions.jq  transform-gungraun.jq
.github/workflows/: bench-alert.yml  bench-comment.yml  bench.yml  benchmark.yml  debug.yml  rust.yml
book/: README.md  book.toml  macros.txt
book/src/: SUMMARY.md  introduction.md  notation.md
book/src/appendix/: terminology.md
book/src/concepts/: r1cs.md
book/src/design/: index.md  mesh.md  structured.md
book/src/design/circuits/: constraints.md  index.md  witness.md
book/src/design/recursion/: staging.md
book/src/development/: circuit_polynomials.md  routines.md
book/src/guide/: available-gadgets.md  drivers.md  gadgets.md
book/src/guide/gadgets/: gadgetkind.md  index.md  kind.md  simple.md
book/src/implementation/: circuits.md  gadgets.md  routines.md
book/src/implementation/drivers/: index.md
book/src/protocol/core/: arithmetization.md  nark.md
book/src/protocol/core/accumulation/: index.md  pcs.md  wiring.md
book/src/protocol/extensions/: endoscalar.md  staging.md
book/src/protocol/prelim/: nested_commitment.md  notation.md  structured_vectors.md  transcript.md
crates/ragu_arithmetic/: COPYRIGHT  Cargo.toml  README.md
crates/ragu_arithmetic/benches/: arithmetic.rs  criterion.rs  iai.rs
crates/ragu_arithmetic/benches/common/: mod.rs
crates/ragu_arithmetic/benches/setup/: mod.rs
crates/ragu_arithmetic/src/: domain.rs  fft.rs  lib.rs  util.rs
crates/ragu_circuits/: COPYRIGHT  Cargo.toml  README.md
crates/ragu_circuits/benches/: circuits.rs  criterion.rs  iai.rs
crates/ragu_circuits/benches/common/: mod.rs
crates/ragu_circuits/benches/setup/: mod.rs
crates/ragu_circuits/src/: ky.rs  lib.rs  mesh.rs  metrics.rs  registry.rs  rx.rs  trivial.rs
crates/ragu_circuits/src/composition/: endoscalar.rs  mod.rs
crates/ragu_circuits/src/polynomials/: mod.rs  omega.rs  staging.rs  structured.rs  txz.rs  unstructured.rs
crates/ragu_circuits/src/s/: common.rs  mod.rs  sx.rs  sxy.rs  sy.rs
crates/ragu_circuits/src/staging/: builder.rs  mask.rs  mod.rs  object.rs
crates/ragu_circuits/src/test_fixtures/: mod.rs  simple_circuit.rs
crates/ragu_circuits/src/tests/: mod.rs
crates/ragu_core/: COPYRIGHT  Cargo.toml  README.md
crates/ragu_core/src/: drivers.rs  errors.rs  gadgets.rs  lib.rs  routines.rs
crates/ragu_core/src/drivers/: coeff.rs  emulator.rs  linexp.rs  phantom.rs  simulator.rs  wireless.rs
crates/ragu_core/src/gadgets/: foreign.rs  sendable.rs
crates/ragu_core/src/maybe/: always.rs  cast.rs  empty.rs  mod.rs
crates/ragu_gadgets/: COPYRIGHT  Cargo.toml  README.md
crates/ragu_gadgets/src/: lib.rs
crates/ragu_macros/: COPYRIGHT  Cargo.toml  README.md
crates/ragu_macros/src/: gadget.rs  helpers.rs  lib.rs  repr.rs
crates/ragu_macros/src/derive/: consistent.rs  mod.rs
crates/ragu_macros/src/proc/: maybe_cast.rs  mod.rs
crates/ragu_macros/tests/: raw_repr.rs
crates/ragu_pasta/: COPYRIGHT  Cargo.toml  README.md  build.rs  pasta_common.rs
crates/ragu_pasta/src/: lib.rs  macros.rs  poseidon_fp.rs  poseidon_fq.rs
crates/ragu_pcd/: Cargo.toml
crates/ragu_pcd/benches/: criterion.rs  iai.rs  pcd.rs
crates/ragu_pcd/benches/common/: mod.rs
crates/ragu_pcd/benches/setup/: mod.rs
crates/ragu_pcd/src/: fuse.rs  header.rs  lib.rs  merge.rs  proof.rs  step.rs  tests.rs  verify.rs
crates/ragu_pcd/src/circuits/: compute_v.rs  full_collapse.rs  hashes_1.rs  hashes_2.rs  mod.rs  partial_collapse.rs  test_params.rs  tests.rs  unified.rs
crates/ragu_pcd/src/circuits/native/: compute_v.rs  full_collapse.rs  hashes_1.rs  hashes_2.rs  mod.rs  partial_collapse.rs  unified.rs
crates/ragu_pcd/src/circuits/native/stages/: error_m.rs  error_n.rs  preamble.rs  query.rs
crates/ragu_pcd/src/circuits/nested/: mod.rs
crates/ragu_pcd/src/circuits/nested/stages/: mod.rs  preamble.rs
crates/ragu_pcd/src/circuits/stages/native/: error_m.rs  error_n.rs  eval.rs  query.rs
crates/ragu_pcd/src/components/: claim_builder.rs  endoscalar.rs  fold_revdot.rs  horner.rs  ky.rs  mod.rs  root_of_unity.rs  suffix.rs  transcript.rs
crates/ragu_pcd/src/components/claims/: mod.rs  native.rs  nested.rs
crates/ragu_pcd/src/fuse/: _04_error_m.rs  _07_query.rs  _08_f.rs  _10_p.rs  _11_circuits.rs  mod.rs
crates/ragu_pcd/src/internal_circuits/: c.rs  compute_v.rs  dummy.rs  fold.rs  full_collapse.rs  hashes_1.rs  hashes_2.rs  ky.rs  mod.rs  partial_collapse.rs  stages.rs  unified.rs  v.rs
crates/ragu_pcd/src/internal_circuits/stages/native/: error.rs  error_n.rs  eval.rs  preamble.rs  query.rs
crates/ragu_pcd/src/proof/: mod.rs
crates/ragu_pcd/src/routines/: compute_c.rs
crates/ragu_pcd/src/step/: adapter.rs  encoder.rs  mod.rs  padded.rs  rerandomize.rs  verify_adapter.rs
crates/ragu_pcd/src/step/internal/: adapter.rs  rerandomize.rs  trivial.rs
crates/ragu_pcd/src/test_fixtures/: mod.rs  nontrivial.rs  trivial.rs
crates/ragu_pcd/src/verify/: stub_unified.rs
crates/ragu_pcd/tests/: nontrivial.rs  registration_errors.rs  rerandomization.rs
crates/ragu_primitives/: COPYRIGHT  Cargo.toml  README.md
crates/ragu_primitives/benches/: criterion.rs  iai.rs  primitives.rs
crates/ragu_primitives/benches/common/: mod.rs
crates/ragu_primitives/benches/setup/: mod.rs
crates/ragu_primitives/src/: boolean.rs  demoted.rs  element.rs  endoscalar.rs  fixedvec.rs  foreign.rs  in_domain.rs  io.rs  lazy.rs  lib.rs  point.rs  poseidon.rs  promotion.rs  serialize.rs  util.rs  vec.rs
crates/ragu_primitives/src/io/: pipe.rs
crates/ragu_primitives/src/util/: batch_inverter.rs
scripts/: dockerized_bench.sh
src/: lib.rs
