[package]
name = "ragu"
version.workspace = true
authors.workspace = true
description = """
Proof-carrying data (PCD) framework for Rust
"""
license.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ragu"
categories = ["cryptography", "mathematics", "algorithms", "science", "no-std"]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
all-features = true

[features]
default = []
test-fixtures = ["ragu_pcd/test-fixtures"]

[dependencies]
ragu_core = { path = "crates/ragu_core", version = "0.0.0" }
ragu_circuits = { path = "crates/ragu_circuits", version = "0.0.0" }
ragu_arithmetic = { path = "crates/ragu_arithmetic", version = "0.0.0" }
ragu_primitives = { path = "crates/ragu_primitives", version = "0.0.0" }
ragu_pcd = { path = "crates/ragu_pcd", version = "0.0.0" }

[workspace]
members = [
  "crates/ragu_arithmetic",
  "crates/ragu_circuits",
  "crates/ragu_core",
  "crates/ragu_gadgets",
  "crates/ragu_macros",
  "crates/ragu_pasta",
  "crates/ragu_primitives",
  "crates/ragu_pcd",
]

resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/tachyon-zcash/ragu"

[workspace.dependencies]
ff = { version = "0.13", default-features = false }
group = { version = "0.13", default-features = false }
pasta_curves = "0.5.1"
rand = "0.8.5"
lazy_static = "1.5.0"
proptest = "1.7.0"
criterion = "0.8.1"
