[package]
name = "ragu_circuits"
version = "0.0.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = """
Intended for internal use in the Ragu project
"""
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

readme = "README.md"
repository = "https://github.com/ebfull/ragu"
documentation = "https://docs.rs/ragu_circuits"
categories = ["cryptography", "mathematics", "algorithms", "science", "no-std"]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
all-features = true

[features]
default = []

[dependencies]
arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", package = "ragu_arithmetic" }
ff = { workspace = true }
group = { workspace = true }
hashbrown = { version = "0.16", default-features = false }
ahash = { version = "0.8.12", default-features = false }
ragu_core = { path = "../ragu_core", version = "0.0.0" }
ragu_primitives = { path = "../ragu_primitives", version = "0.0.0" }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
ragu_pasta = { path = "../ragu_pasta", version = "0.0.0", features = ["baked"] }
