[package]
name = "ragu_core"
version = "0.0.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = """
Intended for internal use in the Ragu project
"""
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

readme = "README.md"
repository = "https://github.com/tachyon-zcash/ragu"
documentation = "https://docs.rs/ragu_core"
categories = [
  "cryptography",
  "development-tools",
  "algorithms",
  "science",
  "no-std",
]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
all-features = true

[features]
alloc = []
default = ["alloc"]

[dependencies]
arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", package = "ragu_arithmetic" }
ff = { workspace = true }
ragu_macros = { path = "../ragu_macros", version = "0.0.0" }
thiserror = "2.0.12"

[dev-dependencies]
rand = { workspace = true }
group = { workspace = true }
ragu_pasta = { path = "../ragu_pasta", version = "0.0.0", features = ["baked"] }
proptest = { workspace = true }
