[package]
name = "ragu_core"
version.workspace = true
authors.workspace = true
description = """
Intended for internal use in the Ragu project
"""
license.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ragu_core"
categories = [
  "cryptography",
  "development-tools",
  "algorithms",
  "science",
  "no-std",
]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
all-features = true

[features]
alloc = []
default = ["alloc"]

[lib]
bench = false

[dependencies]
arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", package = "ragu_arithmetic" }
ff = { workspace = true }
ragu_macros = { path = "../ragu_macros", version = "0.0.0" }
thiserror = "2.0.12"

[dev-dependencies]
rand = { workspace = true }
group = { workspace = true }
ragu_pasta = { path = "../ragu_pasta", version = "0.0.0", features = ["baked"] }
proptest = { workspace = true }
