[package]
name = "ragu_macros"
version = "0.0.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>"
]
description = """
Intended for internal use in the Ragu project
"""
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

readme = "README.md"
repository = "https://github.com/ebfull/ragu"
documentation = "https://docs.rs/ragu_macros"
categories = []
keywords = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
proc-macro2 = "1.0.95"
num-bigint = "0.4.6"
num-traits = "0.2.19"

[dependencies.syn]
version = "2.0.101"
# Helpful for debugging:
# features = ["full", "extra-traits"]
