[package]
name = "ragu_pcd"
version.workspace = true
authors.workspace = true
description = """
Intended for internal use in the Ragu project
"""
license.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ragu_pcd"
categories = [
  "cryptography",
  "mathematics",
  "algorithms",
  "development-tools",
  "no-std",
]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
all-features = true

[features]
default = []
test-fixtures = []

[dependencies]
arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", package = "ragu_arithmetic" }
ff = { workspace = true }
pasta_curves = { workspace = true }
ragu_circuits = { path = "../ragu_circuits", version = "0.0.0" }
ragu_core = { path = "../ragu_core", version = "0.0.0" }
ragu_primitives = { path = "../ragu_primitives", version = "0.0.0" }
rand = { workspace = true }

[dev-dependencies]
ragu_pasta = { path = "../ragu_pasta", version = "0.0.0", features = ["baked"] }
criterion = { workspace = true }

[[bench]]
name = "pcd"
harness = false
required-features = ["test-fixtures"]
