[package]
name = "ragu_primitives"
version = "0.0.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = """
Intended for internal use in the Ragu project
"""
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

readme = "README.md"
repository = "https://github.com/tachyon-zcash/ragu"
documentation = "https://docs.rs/ragu_primitives"
categories = [
  "cryptography",
  "mathematics",
  "algorithms",
  "development-tools",
  "no-std",
]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
all-features = true

[features]
default = []

[dependencies]
arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", package = "ragu_arithmetic" }
ff = { workspace = true }
ragu_core = { path = "../ragu_core", version = "0.0.0" }

# Needed for the `Write` derive macro.
ragu_macros = { path = "../ragu_macros", version = "0.0.0" }

[dev-dependencies]
rand = { workspace = true }
group = { workspace = true }
ragu_pasta = { path = "../ragu_pasta", version = "0.0.0", features = ["baked"] }
